--- a/proto.tex
+++ b/proto.tex
@@ -48,6 +48,9 @@
 
 Did this work?
 
-The symbol for \Q{nene} is \DOWN{\NE\ \NE} and is pronounced \textipa{/nEnE/}.
+The symbol for \Q{nene} is \DOWN{\NE\ \NE} and is pronounced \textipa{[nEnE]}.
+
+\title{Grammar}
+\author{L\'aszl\'o Luk\'acs}
 
 \end{document}
