--- a/proto.tex
+++ b/proto.tex
@@ -5,7 +5,7 @@
 \usepackage{textcomp}
 \usepackage{tipa}
 
-\title{Grammar}
+\title{Language}
 \author{L\'aszl\'o Luk\'acs}
 
 \begin{document}
@@ -35,6 +35,8 @@
 
 \maketitle
 
+\tableofcontents
+
 \DOWN{
 \DIG0 \DIG1 \DIG2 \DIG3 \DIG4 \DIG5
 }
@@ -51,10 +53,17 @@
 \KI\ \MOE\ \NE\ \JEE\ \YOE\ \VU
 }
 
-
-Did this work?
-
 The symbol for \Q{nene} is \DOWN{\NE\ \NE} and is pronounced \textipa{[nEnE]}.
+
+\section{Phonology}
+
+\section{Vocabulary}
+
+\section{Grammar}
+
+\section{Writing}
+
+
 
 
 \end{document}
