--- a/proto.tex
+++ b/proto.tex
@@ -57,6 +57,12 @@ The symbol for \Q{nene} is \DOWN{\NE\ \NE} and is pronounced \textipa{[nEnE]}.
 
 \section{Phonology}
 
+\begin{tabular}{c c c c c c c c}
+  & Bilabial & Labiodental & Dental & Alveolar & Palatal & Velar & Glottal \\
+Plosive & \textipa{p} & & & \textipa{t} & \textipa{c} & \textipa{k} & \\
+
+\end{tabular}
+
 \section{Vocabulary}
 
 \section{Grammar}
