--- a/proto.tex
+++ b/proto.tex
@@ -60,7 +60,9 @@ The symbol for \Q{nene} is \DOWN{\NE\ \NE} and is pronounced \textipa{[nEnE]}.
 \begin{tabular}{c c c c c c c c}
   & Bilabial & Labiodental & Dental & Alveolar & Palatal & Velar & Glottal \\
 Plosive & \textipa{p} & & & \textipa{t} & \textipa{c} & \textipa{k} & \\
-
+Nasal & \textipa{m} & \textipa{M} & & \textipa{n} & & & \\
+Fricative & & \textipa{f} & \textipa{T} & \textipa{s} & & & \textipa{h} \\
+Approximant & & & & & \textipa{j} & & \\
 \end{tabular}
 
 \section{Vocabulary}
