--- a/proto.tex
+++ b/proto.tex
@@ -57,11 +57,15 @@ The symbol for \Q{nene} is \DOWN{\NE\ \NE} and is pronounced \textipa{[nEnE]}.
 
 \section{Phonology}
 
-\begin{tabular}{c c c c c c c c}
+\begin{tabular}{c | c | c | c | c | c | c | c}
   & Bilabial & Labiodental & Dental & Alveolar & Palatal & Velar & Glottal \\
+\hline
 Plosive & \textipa{p} & & & \textipa{t} & \textipa{c} & \textipa{k} & \\
+\hline
 Nasal & \textipa{m} & \textipa{M} & & \textipa{n} & & & \\
+\hline
 Fricative & & \textipa{f} & \textipa{T} & \textipa{s} & & & \textipa{h} \\
+\hline
 Approximant & & & & & \textipa{j} & & \\
 \end{tabular}
 
