--- a/proto.tex
+++ b/proto.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{tipa}
+\usepackage{multirow}
 
 \title{Language}
 \author{L\'aszl\'o Luk\'acs}
@@ -67,6 +68,14 @@ Nasal & \textipa{m} & \textipa{M} & & \textipa{n} & & & \\
 Fricative & & \textipa{f} & \textipa{T} & \textipa{s} & & & \textipa{h} \\
 \hline
 Approximant & & & & & \textipa{j} & & \\
+\end{tabular}
+
+\begin{tabular}{c | c | c | c }
+\multirow{2}{2em}{} & \multicolumn{2}{| c |}{Front} & \multirow{2}{2em}{Back} \\
+\hline
+ Unrounded & Rounded \\
+\hline
+ Close & \textipa{i} & \textipa{y} & \textipa{u} \\
 \end{tabular}
 
 \section{Vocabulary}
