--- a/proto.tex
+++ b/proto.tex
@@ -73,7 +73,7 @@ Approximant & & & & & \textipa{j} & & \\
 \begin{tabular}{c | c | c | c }
 \multirow{2}{2em}{} & \multicolumn{2}{| c |}{Front} & \multirow{2}{2em}{Back} \\
 \hline
- Unrounded & Rounded \\
+ & Unrounded & Rounded & \\
 \hline
  Close & \textipa{i} & \textipa{y} & \textipa{u} \\
 \end{tabular}
