--- a/proto.tex
+++ b/proto.tex
@@ -72,6 +72,7 @@ Approximant & & & & & \textipa{j} & & \\
 
 \begin{tabular}{c | c | c | c }
 \multirow{2}{2em}{} & \multicolumn{2}{| c |}{Front} & \multirow{2}{2em}{Back} \\
+\cline{2-3}
  & Unrounded & Rounded & \\
 \hline
  Close & \textipa{i} & \textipa{y} & \textipa{u} \\
