--- a/proto.tex
+++ b/proto.tex
@@ -76,6 +76,10 @@ Approximant & & & & & \textipa{j} & & \\
  & Unrounded & Rounded & \\
 \hline
  Close & \textipa{i} & \textipa{y} & \textipa{u} \\
+\hline
+Close-mid & \textipa{e} & \textipa{\o} & \textipa{o} \\
+\hline
+Open-mid & \textipa{E} & & \\
 \end{tabular}
 
 \section{Vocabulary}
