--- a/proto.tex
+++ b/proto.tex
@@ -58,6 +58,7 @@ The symbol for \Q{nene} is \DOWN{\NE\ \NE} and is pronounced \textipa{[nEnE]}.
 
 \section{Phonology}
 
+\begin{table}
 \begin{tabular}{c | c | c | c | c | c | c | c}
   & Bilabial & Labiodental & Dental & Alveolar & Palatal & Velar & Glottal \\
 \hline
@@ -69,6 +70,8 @@ Fricative & & \textipa{f} & \textipa{T} & \textipa{s} & & & \textipa{h} \\
 \hline
 Approximant & & & & & \textipa{j} & & \\
 \end{tabular}
+\caption{Consonants}
+\end{table}
 
 \begin{tabular}{c | c | c | c }
 \multirow{2}{2em}{} & \multicolumn{2}{| c |}{Front} & \multirow{2}{2em}{Back} \\
