--- a/proto.tex
+++ b/proto.tex
@@ -73,6 +73,7 @@ Approximant & & & & & \textipa{j} & & \\
 \caption{Consonants}
 \end{table}
 
+\begin{table}
 \begin{tabular}{c | c | c | c }
 \multirow{2}{2em}{} & \multicolumn{2}{| c |}{Front} & \multirow{2}{2em}{Back} \\
 \cline{2-3}
@@ -84,6 +85,8 @@ Close-mid & \textipa{e} & \textipa{\o} & \textipa{o} \\
 \hline
 Open-mid & \textipa{E} & & \\
 \end{tabular}
+\caption{Vowels}
+\end{table}
 
 \section{Vocabulary}
 
