--- a/proto.tex
+++ b/proto.tex
@@ -5,6 +5,7 @@
 \usepackage{textcomp}
 \usepackage{tipa}
 \usepackage{multirow}
+\usepackage{float}
 
 \title{Language}
 \author{L\'aszl\'o Luk\'acs}
@@ -58,7 +59,7 @@ The symbol for \Q{nene} is \DOWN{\NE\ \NE} and is pronounced \textipa{[nEnE]}.
 
 \section{Phonology}
 
-\begin{table}
+\begin{table}[H]
 \begin{tabular}{c | c | c | c | c | c | c | c}
   & Bilabial & Labiodental & Dental & Alveolar & Palatal & Velar & Glottal \\
 \hline
@@ -73,7 +74,7 @@ Approximant & & & & & \textipa{j} & & \\
 \caption{Consonants}
 \end{table}
 
-\begin{table}
+\begin{table}[H]
 \begin{tabular}{c | c | c | c }
 \multirow{2}{2em}{} & \multicolumn{2}{| c |}{Front} & \multirow{2}{2em}{Back} \\
 \cline{2-3}
