--- a/proto.tex
+++ b/proto.tex
@@ -27,6 +27,7 @@
 \newcommand{\NE}{\LET a}
 \newcommand{\MOE}{\LET b}
 \newcommand{\KI}{\LET c}
+\newcommand{\JO}{\LET d}
 
 \newcommand{\SP}{\LET Y}
 
@@ -52,7 +53,7 @@
 \VU\ \YOE\ \JEE\ {\foo .}\ \MOE\ \KI\
 }
 \DOWN{
-\KI\ \SP\ \NE\ {\foo ,}\ \YOE\ \VU
+\KI\ \SP\ \NE\ {\foo ,}\ \JO\ \JO\
 }
 
 The symbol for \Q{nene} is \DOWN{\NE\ \NE} and is pronounced \textipa{[nEnE]}.
